--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,8 @@
   {{#each todos}}
   <li>
     {{this.name}}
-    <a href="./todos/{{this._id}}">Detail</a>
+    <a href="./todos/{{ this._id }}">Detail</a>
+    <a href="./todos/{{ this._id }}/edit">edit</a>
   </li>
   {{/each}}
 </ul>
